# XenServer-snapshot-backup

./: AUTHORS  README  bootstrap  configure.ac  snapback-xva.sh  snapback.sh
config/: Makefile.am  default.conf.in  default.crontab.in  vm-backup-list  xenserver-backup.conf  xenserver-backup.conf.in
lib/: Makefile.am  init-functions.in
scripts/: Makefile.am  xenserver-backup.in
